fix: Align to middle on rest time

--- a/react/src/stylesheets/all.scss
+++ b/react/src/stylesheets/all.scss
@@ -78,7 +78,7 @@ nav a {
 
 time {
   display: block;
-  line-height: .35em;
+  line-height: .6em;
   font-size: 25rem;
   font-weight: bold;
   font-family: SinhalaMN-Bold;
